--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,13 @@
   }
 }
 
-.Nav {
+.navbar {
   display: flex;
-  background-color: rgb(246, 246, 195);
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(232, 226, 147);
+  padding: 8px 12px;
 }
 
 a {
@@ -47,8 +51,49 @@ a {
   text-decoration: none;
 }
 
-li {
+.navbar_menu li {
   list-style: none;
   display: inline;
-  margin: 5px;
+  padding: 8px 12px;
+}
+
+.hamburger {
+  display: none;
+}
+
+@media screen and (max-width: 750px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px 20px 10px 20px;
+    /* background-color: rgb(73, 94, 87); */
+    background-color: beige;
+  }
+
+  .navbar_menu {
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    padding: 0px;
+    width: 100%;
+  }
+
+  .navbar_menu li {
+    width: 100%;
+    text-align: center;
+    border: 2px solid black;
+    padding: 8px 12px;
+  }
+
+  .hamburger {
+    display: block;
+    position: absolute;
+    height: 20px;
+    right: 20px;
+    top: 20px;
+  }
+
+  .navbar_menu.active {
+    display: flex;
+  }
 }
