--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -4,9 +4,73 @@
 
 .heroSection {
   display: flex;
-  background-color: rgb(73, 94, 87);
+  flex-direction: row;
+  background-color: top;
+  background: linear-gradient(
+    to top,
+    white 0%,
+    white 18%,
+    rgb(73, 94, 87) 0%,
+    rgb(73, 94, 87) 100%
+  );
+  padding: 0px 170px 20px 170px;
 }
 
 .heroSection_description {
+  text-align: start;
   color: white;
+}
+
+.heroSection_description > .heading {
+  font-family: "Markazi Text", serif;
+  padding-top: 22px;
+  padding-bottom: 0px;
+}
+
+.heroSection_description > .subheading {
+  font-family: "Markazi Text", serif;
+  padding-top: 0px;
+}
+
+.reserve_button {
+  margin-top: 18px;
+  color: black;
+}
+
+.heroSection_image {
+  padding: 20px 10px 10px 120px;
+}
+
+.heroSection_image > img {
+  width: 800px;
+  height: 360px;
+  border-radius: 9%;
+}
+
+.highlights {
+  background-color: rgba(255, 255, 255, 0.909);
+  padding: 0px 160px 20px 160px;
+}
+
+.highlights_heading {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 0px 18px;
+  align-items: center;
+}
+
+.highlights_heading > .heading {
+  font-family: "Markazi Text", serif;
+  font-size: 2.8em;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 10px 19px 10px;
+}
+
+.highlights_heading > button {
+  margin: 18px 30px 0px 0px;
 }
