--- a/src/App.css
+++ b/src/App.css
@@ -2,41 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .navbar {
   display: flex;
   flex-direction: row;
@@ -49,6 +14,14 @@
 a {
   color: inherit;
   text-decoration: none;
+}
+
+a > img {
+  min-width: 180px;
+}
+
+.navbar_menu {
+  min-width: 600px;
 }
 
 .navbar_menu li {
