--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -4,7 +4,9 @@
 
 .heroSection {
   display: flex;
-  flex-direction: row;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
   background-color: top;
   background: linear-gradient(
     to top,
@@ -17,19 +19,25 @@
 }
 
 .heroSection_description {
+  padding: 20px;
   text-align: start;
   color: white;
 }
 
 .heroSection_description > .heading {
   font-family: "Markazi Text", serif;
-  padding-top: 22px;
-  padding-bottom: 0px;
+  white-space: nowrap;
 }
 
 .heroSection_description > .subheading {
   font-family: "Markazi Text", serif;
-  padding-top: 0px;
+  margin-bottom: 0px;
+}
+
+.heroSection_description > .description {
+  width: 280px;
+  height: 90px;
+  padding: 0px;
 }
 
 .reserve_button {
@@ -39,6 +47,8 @@
 
 .heroSection_image {
   padding: 20px 10px 10px 120px;
+  max-width: 450px;
+  min-width: 450px;
 }
 
 .heroSection_image > img {
@@ -58,6 +68,7 @@
   justify-content: space-between;
   padding: 0px 18px;
   align-items: center;
+  white-space: nowrap;
 }
 
 .highlights_heading > .heading {
@@ -73,4 +84,25 @@
 
 .highlights_heading > button {
   margin: 18px 30px 0px 0px;
+}
+
+@media screen and (max-width: 750px) {
+  .heroSection {
+    flex-flow: column nowrap;
+    align-items: center;
+  }
+
+  .heroSection_image {
+    padding: 60px;
+  }
+
+  .highlights_heading {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .cards {
+    flex-direction: column;
+    width: 50vw;
+  }
 }
