--- a/src/components/cards/Card.css
+++ b/src/components/cards/Card.css
@@ -5,14 +5,14 @@
   background-color: #edefee;
   margin: 10px 20px 10px 20px;
   padding: 10px;
-  /* max-width: 300px; */
   border-radius: 10%;
   flex: auto;
+  border: 2px solid rgba(188, 187, 187, 0.446);
 }
 
 .card > img {
-  height: 180px;
-  width: 200px;
+  height: 220px;
+  width: 330px;
   border-radius: 10%;
   object-fit: cover;
   margin-bottom: 20px;
